# datalk

./: .envrc  .envrc.sample  .gitattributes  .gitignore  .gitmodules  .terraform.lock.hcl  README.md  flake.nix  treefmt.nix
nix/: checks.nix  deploy.nix  formatter.nix  inputs.nix  packages.nix  process-compose.nix  shell.nix  systems.nix  ui.nix
nix/_generated/: cloudnative-pg.nix  external-secrets.nix  tailscale-operator.nix
nix/infra/: application.nix  default.nix  k3d.nix  k8s.nix  project.nix  secrets.nix
nix/kubernetes/: cloudnative-pg.nix  datalk-dev.nix  datalk.nix  default.nix  external-secrets.nix  python-server.nix  tailscale-operator.nix  valkey.nix
nix/services/: database.nix  python-server.nix
nix/systems/: default.nix  ui.nix
notebooks/: cfbd.ipynb  load_data.ipynb
python-server/: default.nix  package.nix  pyproject.toml
python-server/src/: data_source.py  main.py
tf/: aws.pub  default.nix
ui/: default.nix  drizzle.config.ts  package-lock.json  package.json  package.nix  svelte.config.js  tsconfig.json  vite.config.ts
ui/drizzle/: 0000_init.sql  0001_charming_randall.sql  0002_bored_moondragon.sql  0003_sloppy_quicksilver.sql  0004_amusing_kingpin.sql  0005_far_exiles.sql  0006_mighty_amphibian.sql  0007_productive_young_avengers.sql  0008_workable_nightmare.sql  0009_jittery_nuke.sql  0010_majestic_hairball.sql  0011_greedy_power_pack.sql  0012_red_kang.sql  0013_thankful_warlock.sql  0014_large_whirlwind.sql  0015_melted_unus.sql  0016_new_abomination.sql  0017_useful_mulholland_black.sql  0018_moaning_tag.sql  0021_nice_rhino.sql  (+13 more)
(+171 files in other folders)
