[project]
name = "python-server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "notebook>=7.4.4",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "jupyter",
]

[project.scripts]
server = "src.main:main"

[build-system]
requires = [ "setuptools", ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
